# crypto-research-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/skills/crypto-research-methodology/: SKILL.md
.claude/skills/crypto-research-methodology/references/: report-template.md
.claude/skills/news-research/: SKILL.md
.claude/skills/news-research/references/: trusted-sources.md
.claude/skills/sentiment-analysis/: SKILL.md
.claude/skills/sentiment-analysis/references/: sentiment-rules.md
.claude/skills/technical-analysis/: SKILL.md
.claude/skills/technical-analysis/references/: indicators.md
.claude/skills/technical-analysis/scripts/: calculate_indicators.py
docs/: API_SETUP.md  ARCHITECTURE.md  SKILLS.md
examples/: bitcoin_research.md  ethereum_research.md
mcp_servers/: README.md  __init__.py
mcp_servers/coingecko/: __init__.py  client.py  server.py  tools.py
mcp_servers/notion/: __init__.py  client.py  server.py
prompts/: main_agent.md  news_aggregator.md  price_analyst.md  social_sentinel.md
src/: __init__.py  agent.py
src/mcp/: __init__.py  coingecko.py
src/subagents/: __init__.py  news_aggregator.py  price_analyst.py  social_sentinel.py
src/utils/: __init__.py  allocation_guidance.py  display.py  prompts.py
tests/: __init__.py  test_allocation_guidance.py  test_skills.py  test_subagents.py
